Startet some report

--- a/Assign3/Part1/proof.tex
+++ b/Assign3/Part1/proof.tex
@@ -1,9 +1,9 @@
 \subsection{proof}
 
 For the hidden neurons, we have the non-linearity (transfer function, activation function)
-\begin{equation*}
+\begin{equation} \label{eq:transformation}
     h(a) = \frac{a}{1 + |a|}
-\end{equation*}
+\end{equation}
 And we wish to find its derivitive 
 
 \begin{equation*}
