--- a/Assign3/Part1/proof.tex
+++ b/Assign3/Part1/proof.tex
@@ -61,6 +61,6 @@ With both $a > 0$ and $a < 0$ means $|a| = a$ we use (\ref{mathlol}):
 \end{equation*}
 Simplify:
 
-\begin{equation*}
+\begin{equation} \label{eq:deriv}
     h'(a) = \frac{1}{(1 + |a|)^2}
-\end{equation*}
+\end{equation}
