--- a/Assign3/opgave.tex
+++ b/Assign3/opgave.tex
@@ -89,9 +89,8 @@ The change in weight we found by:
 \end{equation}
 We then add the calculated delta value to the previous weight. 
 We belive it is somewhere here we have a problem as the change in 
-weight does not appear to be correct.
-
-\subsection{Results}
+weight does not appear to be correct. and because of this we have a
+large gradiant.
 
 \begin{figure}
     \centering
