--- a/Assign3/opgave.tex
+++ b/Assign3/opgave.tex
@@ -49,8 +49,15 @@ Students: & Lasse Ahlbech Madsen \\
 \newpage
 
 \subsection{Implementation}
-As I foolishly chose to implement the network in python from scrach, we have no finished a working implementation. We are however close and are at a point where we do not know where the error is. Here follows exacly what (we think) the network does.\\
-We hope this implementation shows we have a grasp of at least the basics of the neural network so we can use an already implemented version of it, which hopefully can save us from using the extra time on the resubmission.
+
+As we somewhat foolishly chose to implement the network in python from
+scratch, we have not finished a working implementation. We are however
+close, but at a point where we do not know where the error is. Here follows
+exacly what (we think) the network does.\\ 
+We hope this implementation
+shows we have a grasp of at least the basics of the neural network so we
+can use an already implemented version of it, which hopefully can save us
+from using the extra time on the resubmission.
 
 \subsubsection{Feed-Forward}
 We implemented the feed-forward in layers, with each layer containing $N$ neurons $n_i$ and $N \cdot M$ weights $w_{ij}$, where $M$ is the number of the following layers neurons.\\
@@ -92,6 +99,8 @@ We belive it is somewhere here we have a problem as the change in
 weight does not appear to be correct. and because of this we have a
 large gradiant.
 
+\subsection{III.1.2}
+
 \begin{figure}
     \centering
     \begin{subfigure}[b]{0.49\textwidth}
@@ -107,6 +116,50 @@ large gradiant.
     \caption{Error calculation as a function of runs with learning and momentum constants set to 0.05}
     \label{}
 \end{figure}
+
+
+The value of the learning rate affects how much the weights change with
+every epoch. High values causes larger changes. This affects running time,
+but a low rate also causes the network to be vulnerable to local minimums
+while a large rate can cause it to miss good minumums.
+
+Figure \ref{fig:2scatter} shows the MSE of our neural networks. While
+both of the models gradually decrease in error, the training error gets
+a lot lower for the model with 20 nodes. Maybe because 2 nodes are not
+sufficient to describe the data or possibly because the larger model
+overfit the data. The latter seems likely as the test data ends at just
+about the same value with both models.
+
+\begin{figure}
+    \centering
+    \begin{subfigure}[b]{0.49\textwidth}
+        \includegraphics[width=1.0\textwidth]{Part1/20NSinc.png}
+        \caption{20 Nodes}
+        \label{fig:plot2}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.49\textwidth}
+        \includegraphics[width=1.0\textwidth]{Part1/2NSinc.png}
+        \caption{2 Nodes} 
+        \label{fig:plot2}
+    \end{subfigure}
+    \caption{Sinc(x) plottet together with our two neural networks with
+    various learningrates.}
+    \label{}
+\end{figure}
+
+Figure \ref{fig:plot2} does a good job of illustrating that our code does
+not really work and it is hard to say what it would look like if it did.
+
+\subsubsection{Overfitting}
+
+When you have a lot of parameters to tune and a low of amount of data to
+train you risk creating a very complex model that works really well with
+your training data, but does not generalize very well. If you have a
+validation set, you can train your model with your training data while
+testing it on your testdata. At a point the error on your validation set
+should start rising while the training error lowers, at that point you can
+do early stopping to get a model which is likely better than the one you
+would end up with.
 
 \section{III.2}
 
